--- a/app/src/main/res/drawable/circle_progress.xml
+++ b/app/src/main/res/drawable/circle_progress.xml
@@ -8,7 +8,7 @@
             android:thickness="6dp"
             android:useLevel="true">
 
-        <solid android:color="@color/progressActive" />
+        <solid android:color="#fff" />
 
     </shape>
 </rotate>
