--- a/app/src/main/res/layout/content_item.xml
+++ b/app/src/main/res/layout/content_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
+              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
@@ -9,10 +9,10 @@
     <ImageView
             android:id="@+id/posterImage"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/poster_list_height"
             android:layout_weight="1"
             android:scaleType="centerCrop"
-            tools:background="@android:color/darker_gray"/>
+            app:srcCompat="@drawable/movie_poster_stub"/>
 
     <RelativeLayout
             android:layout_width="0dp"
@@ -74,7 +74,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/releaseDate"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="20dp"
                 android:lines="6"
                 android:ellipsize="end"
                 style="@style/TextStyle"
