--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,8 +53,10 @@
         <item name="textAllCaps">true</item>
     </style>
 
-    <style name="SearchFieldStyle" parent="Widget.AppCompat.EditText">
-        <item name="android:background">@color/pageBackground</item>
+    <style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <item name="android:textColor">@color/textColorLight</item>
+        <item name="android:colorPrimary">@color/colorAccent</item>
+        <item name="android:background">@drawable/search_view_bg</item>
     </style>
 
 </resources>
